--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -1,3 +1,12 @@
+spring:
+    config:
+        activate:
+            on-profile: local
+
 telegram:
     bot:
         token: ${TG_BOT_TOKEN}
+        webhook:
+            enabled: false
+            host: ""
+            maxConnections: 100
