--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 
 		<bot-api.version>6.5.0</bot-api.version>
 		<chatgpt-api.version>1.0.0</chatgpt-api.version>
+		<gson.version>2.10.1</gson.version>
 	</properties>
 
 	<dependencies>
@@ -56,6 +57,14 @@
 			<artifactId>java-telegram-bot-api</artifactId>
 			<version>${bot-api.version}</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>${gson.version}</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
