--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,3 +5,6 @@ telegram:
             enabled: ${TG_BOT_WEBHOOK_ENABLED}
             host: ${TG_BOT_HOST}
             maxConnections: ${TG_BOT_MAX_CONNECTIONS}
+
+openai:
+    token: ${OPEN_AI_TOKEN}
