--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
 	<groupId>io.github.aminovmaksim</groupId>
 	<artifactId>chatgptbot</artifactId>
-	<version>DEV-SNAPSHOT</version>
+	<version>1.0.0</version>
 
 	<name>ChatGPT Bot</name>
 	<description>Simple Telegram ChatGPT Bot</description>
